Fixed spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,6 @@ font-size: 30px;
   font-size: 18px;
 }
 
-.titleP{
-  line-height: 10px;
-}
-
 
 
 
